--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@layer components {
+    .answer-label {
+        @apply peer-checked:bg-[#2984D5] hover:bg-gray-100 peer-checked:shadow-none peer-checked:text-white w-full block p-2 rounded-lg border shadow-md cursor-pointer
+    }
+}
 @layer base {
     .text-outline {
         text-shadow: 0 0 0.1px black, 0 0 0.1px black, 0 0 0.1px black,
@@ -16,4 +20,5 @@
     ::-webkit-scrollbar {
         width: 0px;
     }
+    
 }
