--- a/public/css/chatify/style.css
+++ b/public/css/chatify/style.css
@@ -1,17 +1,75 @@
+html,
 body {
   margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+:root {
+  /*
+    * --------------------------------------------------
+    * NOTE: `--primary-color` variable set in
+    *       `headLinks.blade.php` view file.
+    * --------------------------------------------------
+    */
+
+  /* General variables */
+  --icon-size: 20px;
+  --headers-padding: 1rem;
+  --listView-header-height: 110px;
+
+  /* Light theme variables */
+  --primary-bg-color: #fff;
+  --secondary-bg-color: #f7f7f7;
+  --border-color: #eee;
+  --messagingView-bg-color: #f6f7f9;
+  --scrollbar-thumb-color: #cfcfcf;
+  --modal-bg-color: #fff;
+  --send-input-icons-color: #4b4b4b;
+  --message-hint-bg-color: #ededed;
+  --message-hint-color: #4b4b4b;
+  --message-card-color: #fff;
+
+  /* Dark theme variables */
+  --dark-primary-bg-color: #121212;
+  --dark-secondary-bg-color: #202020;
+  --dark-border-color: #202020;
+  --dark-messagingView-bg-color: #1b1b1b;
+  --dark-scrollbar-thumb-color: #212121;
+  --dark-modal-bg-color: #1a1a1a;
+  --dark-send-input-icons-color: #c8c8c8;
+  --dark-message-hint-bg-color: #292929;
+  --dark-message-hint-color: #ffffff;
+  --dark-message-card-color: #292929;
+}
+
+/* NProgress background */
+#nprogress .bar {
+  background: var(--primary-color) !important;
+}
+#nprogress .peg {
+  box-shadow: 0 0 10px var(--primary-color), 0 0 5px var(--primary-color) !important;
+}
+#nprogress .spinner-icon {
+  border-top-color: var(--primary-color) !important;
+  border-left-color: var(--primary-color) !important;
+}
+
 /*internet connection*/
 .internet-connection {
   display: none;
   background: rgba(0, 0, 0, 0.76);
   position: absolute;
-  top: 43px;
+  bottom: calc(
+    -100% + (var(--headers-padding) + var(--headers-padding)) - 8px
+  ); /* 8px = 4px padding-top + 4px padding-bottom */
   left: 0;
   right: 0;
   text-align: center;
   padding: 4px;
   color: #fff;
+  z-index: 1;
 }
 .internet-connection span {
   display: none;
@@ -30,15 +88,16 @@ body {
   background: transparent;
   transition: all 0.3s ease;
 }
-.app-scroll-thin::-webkit-scrollbar {
-  width: 1px;
-  height: 1px;
-  border-radius: 4px;
-  transition: all 0.3s ease;
+.app-scroll-hidden::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
 }
 .app-scroll::-webkit-scrollbar-thumb,
-.app-scroll-thin::-webkit-scrollbar-thumb {
-  border-radius: 4px;
+.app-scroll-hidden::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+}
+.messenger-headTitle {
+  margin: 0rem 0.7rem;
 }
 .messenger {
   display: inline-flex;
@@ -47,6 +106,9 @@ body {
   font-family: sans-serif;
 }
 .messenger-listView {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   position: relative;
   top: 0px;
   left: 0px;
@@ -58,45 +120,46 @@ body {
   overflow: auto;
 }
 .messenger-listView .m-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 0px !important;
+  height: var(--listView-header-height);
 }
 .messenger-listView .m-header > nav {
-  margin: 10px;
-}
-.messenger-listView .m-body {
-  margin-top: 141px;
+  padding: var(--headers-padding);
 }
 .messenger-messagingView {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   overflow: hidden;
   width: 100%;
 }
+.messenger-messagingView .m-header {
+  padding: var(--headers-padding);
+}
 .messenger-messagingView .m-body {
+  position: relative;
   padding-top: 15px;
-  height: calc(100% - 90px);
   overflow-x: hidden;
   overflow-y: auto;
+  height: 100%;
 }
 .m-header {
-  padding: 10px 15px;
   font-weight: 600;
   background: transparent;
 }
 .m-header-right {
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   float: right;
 }
 .m-header-messaging {
+  position: relative;
   background: #fff;
   box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.06);
 }
 .m-header svg {
-  margin: 0px 8px;
-  font-size: 16px;
+  color: var(--primary-color);
+  font-size: var(--icon-size);
   transition: transform 0.12s;
 }
 .m-header svg:active {
@@ -118,6 +181,10 @@ body {
   box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.06);
 }
 .messenger-listView-tabs a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
   width: 100%;
   text-align: center;
   padding: 10px;
@@ -129,9 +196,17 @@ body {
 .messenger-listView-tabs a:focus {
   text-decoration: none;
 }
+.messenger-listView-tabs a,
+.messenger-listView-tabs a:hover,
+.messenger-listView-tabs a:focus {
+  color: var(--primary-color);
+}
+.active-tab {
+  border-bottom: 2px solid var(--primary-color);
+}
 .messenger-tab {
   overflow: auto;
-  height: calc(100vh - 143px);
+  height: calc(100vh - var(--listView-header-height) - 2px);
   display: none;
   position: relative;
 }
@@ -164,6 +239,18 @@ body {
   color: #fff !important;
 }
 
+.m-list-active,
+.m-list-active:hover,
+.m-list-active:focus {
+  background: var(--primary-color) !important;
+}
+.m-list-active b {
+  background: #fff !important;
+  color: var(--primary-color) !important;
+}
+.m-list-active .activeStatus {
+  border-color: var(--primary-color) !important;
+}
 .messenger-list-item td {
   padding: 10px;
 }
@@ -174,7 +261,6 @@ body {
 .messenger-list-item td p {
   margin-bottom: 4px;
   font-size: 14px;
-  font-weight: 600;
 }
 .messenger-list-item td p span {
   float: right;
@@ -182,21 +268,23 @@ body {
 .messenger-list-item td span {
   color: #cacaca;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 12px;
 }
 .messenger-list-item td b {
   float: right;
   color: #fff;
+  background: var(--primary-color);
   padding: 0px 4px;
   border-radius: 20px;
   font-size: 13px;
-  width: 20px;
+  width: auto;
   height: auto;
   text-align: center;
 }
 .avatar {
   text-align: center;
   border-radius: 100%;
+  border: 1px solid;
   overflow: hidden;
   background-image: url("");
   background-repeat: no-repeat;
@@ -214,6 +302,24 @@ body {
 .av-s {
   width: 32px !important;
   height: 32px !important;
+}
+.saved-messages.avatar {
+  background-color: transparent;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.saved-messages.avatar > svg {
+  font-size: 22px;
+  color: var(--primary-color);
+}
+.messenger-list-item.m-list-active .saved-messages.avatar > svg {
+  color: #fff;
+}
+.messenger-list-item.m-list-active .saved-messages.avatar {
+  border-color: #ffffff81;
 }
 .messenger-favorites {
   padding: 10px;
@@ -234,30 +340,52 @@ body {
 .messenger-favorites div.avatar {
   border: 2px solid #fff;
   margin: 0px 4px;
+  box-shadow: 0px 0px 0px 2px var(--primary-color);
 }
 .messenger-favorites > div:active {
   transform: scale(0.9);
 }
 .messenger-title {
+  position: relative;
   margin: 0;
-  padding: 10px;
-  padding-bottom: 0px;
-  text-transform: uppercase;
-  color: #aeaeb7;
+  padding: 10px !important;
+  text-transform: capitalize;
   font-size: 12px;
-  font-weight: 600;
+  text-align: center;
+  z-index: 1;
+}
+.messenger-title > span {
+  position: relative;
+  padding: 0px 10px;
+  z-index: 1;
+}
+.messenger-title::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  bottom: 50%;
+  left: 0;
+  right: 0;
+  z-index: 0;
 }
 .messenger-infoView {
   display: block;
-  padding-top: 7px;
   overflow: auto;
   width: 40%;
   min-width: 200px;
 }
+.messenger-infoView nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--headers-padding);
+}
 .messenger-infoView nav a {
+  color: var(--primary-color);
   text-decoration: none;
-  padding: 5px 8px;
-  font-size: 18px;
+  font-size: var(--icon-size);
 }
 .messenger-infoView > div {
   margin: auto;
@@ -279,6 +407,9 @@ body {
   border-radius: 3px;
   font-size: 14px;
   transition: background 0.3s;
+}
+.messenger-infoView-btns a.default {
+  color: var(--primary-color);
 }
 .messenger-infoView-btns a.default:hover {
   background: #f0f6ff;
@@ -317,51 +448,89 @@ body {
 }
 .message-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  width: 100%;
   margin: 2px 15px;
-  width: calc(100% - 30px);
+  width: calc(100% - 30px); /* 30px = 15px padding left + right */
+  justify-content: flex-start;
+}
+.message-card .message-card-content {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  max-width: 60%;
+}
+.message-card.mc-sender .message-card-content {
+  align-items: end;
+}
+.message-card .image-wrapper .image-file {
+  position: relative;
+}
+.message-card .image-wrapper .image-file > div {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  padding: 0.5rem;
+  font-size: 11px;
+  color: #fff;
+}
+.message-card-content:hover .image-wrapper .image-file > div {
+  display: block;
 }
 .message-card div {
   margin-top: 0px;
 }
-.message-card p {
+.message-card .message {
   margin: 0;
   padding: 6px 15px;
   padding-bottom: 5px;
-  max-width: 80%;
   width: fit-content;
   width: -webkit-fit-content;
   border-radius: 20px;
   word-break: break-word;
+  display: table-cell;
 }
-.message-card p sub {
+.message-card .message-time {
   display: inline-block;
   font-size: 11px;
 }
-.message-card p sub:before {
+.message-card .message .message-time:before {
   content: "";
   background: transparent;
-  width: 10px;
-  height: 10px;
+  width: 4px;
+  height: 4px;
   display: inline-block;
 }
-.mc-sender {
-  direction: rtl;
+.message-card.mc-sender {
+  justify-content: flex-end;
 }
-.mc-sender p {
+.message-card.mc-sender .message {
   direction: ltr;
   color: #fff !important;
+  background: var(--primary-color) !important;
 }
-.mc-sender p sub {
+.message-card.mc-sender .message .message-time {
   color: rgba(255, 255, 255, 0.67);
 }
 
-.mc-error p {
+.mc-error .message {
   background: rgba(255, 0, 0, 0.27) !important;
   color: #ff0000 !important;
 }
-.mc-error p sub {
+.mc-error .message .message-time {
   color: #ff0000 !important;
+}
+.messenger-sendCard .send-button svg {
+  color: var(--primary-color);
 }
 .listView-x,
 .show-listView {
@@ -369,14 +538,17 @@ body {
 }
 .messenger-sendCard {
   display: none;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+  margin: 10px;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 .messenger-sendCard form {
   width: 100%;
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
 }
 .messenger-sendCard input[type="file"] {
@@ -421,9 +593,10 @@ body {
   position: relative;
   padding: 10px;
 }
+
 .attachment-preview > p {
   margin: 0;
-  font-weight: 600;
+  font-size: 12px;
   padding: 0px;
   padding-top: 10px;
 }
@@ -436,11 +609,15 @@ body {
 .attachment-preview svg:active {
   transform: none;
 }
-.image-file {
+.message-card .image-file,
+.attachment-preview .image-file {
   cursor: pointer;
   width: 140px;
   height: 70px;
-  border-radius: 4px;
+  border-radius: 6px;
+  width: 260px;
+  height: 170px;
+  overflow: hidden;
   background-color: #f7f7f7;
   background-size: cover;
   background-repeat: no-repeat;
@@ -488,6 +665,9 @@ body {
 }
 .messages {
   padding: 5px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 .message-hint {
   margin: 0;
@@ -500,10 +680,8 @@ body {
   transform: translate(-50%, -50%);
 }
 .message-hint span {
-  background: rgba(154, 161, 170, 0.13);
   padding: 3px 10px;
   border-radius: 20px;
-  color: rgb(135, 147, 164);
   display: inline-block;
 }
 .upload-avatar-details {
@@ -547,6 +725,7 @@ body {
 .dark-mode-switch {
   margin: 0px 5px;
   cursor: pointer;
+  color: var(--primary-color);
 }
 .activeStatus {
   width: 12px;
@@ -557,6 +736,9 @@ body {
   bottom: 12%;
   right: 6%;
   transition: border 0.1s;
+}
+.lastMessageIndicator {
+  color: var(--primary-color) !important;
 }
 
 /*
@@ -614,7 +796,7 @@ body {
   color: #fff;
 }
 .a-btn-success {
-  background: #3fc380 !important;
+  background: #1e8a53 !important;
   color: #fff;
 }
 .a-btn-success:hover,
@@ -647,7 +829,7 @@ body {
   right: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.53);
-  z-index: 2;
+  z-index: 50;
 }
 .app-modal-container {
   position: absolute;
@@ -735,7 +917,7 @@ div.loadingPlaceholder-date {
 .imageModal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 50;
   padding-top: 100px;
   left: 0;
   top: 0;
@@ -748,8 +930,7 @@ div.loadingPlaceholder-date {
 .imageModal-content {
   margin: auto;
   display: block;
-  width: 80%;
-  max-width: 700px;
+  height: calc(100vh - 150px);
 }
 .imageModal-content {
   -webkit-animation-name: zoom;
@@ -850,6 +1031,9 @@ div.loadingPlaceholder-date {
   }
 }
 @media (max-width: 980px) {
+  .messenger-listView.conversation-active {
+    display: none;
+  }
   .messenger-listView {
     position: fixed;
     left: 0;
@@ -957,17 +1141,44 @@ div.loadingPlaceholder-date {
   margin-bottom: 0.5rem; /* 8px */
 }
 
+.messenger [type="text"]:focus {
+  outline: 1px solid var(--primary-color);
+  border-color: var(--primary-color) !important;
+  border-color: var(--primary-color);
+  box-shadow: 0 0 2px var(--primary-color);
+}
+
 .messenger textarea:focus {
   outline: none;
   border: none;
   box-shadow: none;
 }
-.chatify-hover-delete-btn {
+.message-card .actions {
+  opacity: 0.6;
+}
+.message-card .actions .delete-btn {
   display: none;
   cursor: pointer;
   color: #333333;
 }
 
-.message-card:hover .chatify-hover-delete-btn {
+.message-card:hover .actions .delete-btn {
   display: block;
+}
+
+/*
+*****************************************
+* Emoji Button scroll-bars
+*****************************************
+*/
+.emoji-picker__emojis::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  border-radius: 4px;
+  background: transparent;
+  transition: all 0.3s ease;
+}
+.emoji-picker__emojis::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: transparent;
 }
